fix: align email input text with label in login form

--- a/blocks/header/header.css
+++ b/blocks/header/header.css
@@ -686,7 +686,7 @@ header .nav-search-input .search_autocomplete .popover-container {
 }
 
 .dropdown-wrapper.nav-tools-wrapper .nav-auth-menu-panel .auth-sign-in-form__form__field--email .dropin-input {
-  padding-left: 36px;
+  padding-left: 49px;
 }
 
 .dropdown-wrapper.nav-tools-wrapper .nav-auth-menu-panel .auth-sign-in-form__form__field--email .dropin-input__label--floating {
